--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
     - name: Run pre-commit hooks
       run: uv run pre-commit run --all-files
 
+    - name: Run mypy
+      run: uv run mypy dagster_clickhouse/
+
     - name: Run tests
       run: uv run pytest tests/ -v
       env:
