--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,9 +18,6 @@ jobs:
           - 9000:9000
         env:
           CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
-          CLICKHOUSE_USER: dagster
-          CLICKHOUSE_PASSWORD: dagster
-          CLICKHOUSE_DB: dagster
         options: >-
           --health-cmd "wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1"
           --health-interval 30s
@@ -44,10 +41,7 @@ jobs:
     - name: Run pre-commit hooks
       run: uv run pre-commit run --all-files
 
-    - name: Run mypy
-      run: uv run mypy dagster_clickhouse/
-
     - name: Run tests
       run: uv run pytest tests/ -v
       env:
-        CLICKHOUSE_URL: "http://dagster:dagster@localhost:8123/test_dagster"
+        CLICKHOUSE_URL: "http://localhost:8123"
