Disable tests for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,22 +10,22 @@ jobs:
   lint-and-test:
     runs-on: ubuntu-latest
 
-    services:
-      clickhouse:
-        image: clickhouse/clickhouse-server:latest
-        ports:
-          - 8123:8123
-          - 9000:9000
-        env:
-          CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
-          CLICKHOUSE_USER: dagster
-          CLICKHOUSE_PASSWORD: dagster
-          CLICKHOUSE_DB: dagster
-        options: >-
-          --health-cmd "wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1"
-          --health-interval 30s
-          --health-timeout 10s
-          --health-retries 3
+    # services:
+    #   clickhouse:
+    #     image: clickhouse/clickhouse-server:latest
+    #     ports:
+    #       - 8123:8123
+    #       - 9000:9000
+    #     env:
+    #       CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
+    #       CLICKHOUSE_USER: dagster
+    #       CLICKHOUSE_PASSWORD: dagster
+    #       CLICKHOUSE_DB: dagster
+    #     options: >-
+    #       --health-cmd "wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1"
+    #       --health-interval 30s
+    #       --health-timeout 10s
+    #       --health-retries 3
 
     steps:
     - uses: actions/checkout@v4
@@ -47,7 +47,7 @@ jobs:
     - name: Run mypy
       run: uv run mypy dagster_clickhouse/
 
-    - name: Run tests
-      run: uv run pytest tests/ -v
-      env:
-        CLICKHOUSE_URL: "http://dagster:dagster@localhost:8123/test_dagster"
+    # - name: Run tests
+    #   run: uv run pytest tests/ -v
+    #   env:
+    #     CLICKHOUSE_URL: "http://dagster:dagster@localhost:8123/test_dagster"
